syntax = "proto3";

package go.micro.srv.PutOrders;

service PutOrders {
  rpc PutOrders(Request) returns (Response) {}
}

message Request {
  string SessionId = 1;
  // 订单 id
  string OrderId = 2;
  // 同意 or 拒绝
  string Action = 3;
}

message Response {
  string ErrNo = 1;
  string ErrMsg = 2;
}
